--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "@decorators/express": "^2.2.1",
         "body-parser": "^1.18.2",
         "debug": "^3.1.0",
         "express": "^4.16.2",
