--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,8 +3,10 @@
         "target": "es6",
         "module": "commonjs",
         "outDir": "./dist",
-        "strict": true,
-        "sourceMap": true
+        // "strict": true,
+        "sourceMap": true,
+        "emitDecoratorMetadata": true,
+        "experimentalDecorators": true
     },
     "include": [
         "src/**/*.ts"
