--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
         "express": "^4.16.2",
         "gulp": "^3.9.1",
         "gulp-typescript": "^4.0.1",
-        "morgan": "^1.9.0"
+        "morgan": "^1.9.0",
+        "mysql": "^2.15.0",
+        "reflect-metadata": "^0.1.12",
+        "typeorm": "^0.1.12"
     },
     "devDependencies": {
         "@types/body-parser": "^1.16.8",
