--- a/package.json
+++ b/package.json
@@ -17,12 +17,13 @@
         "body-parser": "^1.18.2",
         "debug": "^3.1.0",
         "express": "^4.16.2",
+        "express-mysql-session": "^1.2.3",
         "gulp": "^3.9.1",
         "gulp-typescript": "^4.0.1",
         "morgan": "^1.9.0",
         "mysql": "^2.15.0",
-        "reflect-metadata": "^0.1.12",
-        "typeorm": "^0.1.12"
+        "sha1": "^1.1.1",
+        "wafer-node-session": "^1.0.10"
     },
     "devDependencies": {
         "@types/body-parser": "^1.16.8",
