完成功能試做 登入 查詢門診 預約掛號 傳送模板訊息 客服訊息回覆

--- a/package.json
+++ b/package.json
@@ -5,23 +5,32 @@
     "main": "index.js",
     "scripts": {
         "gulp": "gulp",
-        "test": "mocha --reporter spec --exit --compilers ts:ts-node/register 'test/**/*.test.ts'",
+        "test": "NODE_TLS_REJECT_UNAUTHORIZED=0 mocha --reporter spec --exit --compilers ts:ts-node/register 'test/**/*.test.ts'",
         "build": "tsc",
         "prestart": "npm run build",
-        "start": "node ./dist/index.js"
+        "start": "node ./dist/index.js",
+        "serve": "node ./dist/index.js",
+        "login": "ssh leo@54.199.147.172",
+        "remote-install": "sh ./npm-scripts/remote-install.sh",
+        "predeploy": "npm run build",
+        "deploy": "sh ./npm-scripts/deploy.sh"
     },
     "author": "",
     "license": "ISC",
     "dependencies": {
         "@decorators/express": "^2.2.1",
+        "@types/request": "^2.47.0",
         "body-parser": "^1.18.2",
         "debug": "^3.1.0",
         "express": "^4.16.2",
         "express-mysql-session": "^1.2.3",
+        "express-xml-bodyparser": "^0.3.0",
         "gulp": "^3.9.1",
         "gulp-typescript": "^4.0.1",
         "morgan": "^1.9.0",
         "mysql": "^2.15.0",
+        "node-weixin-message": "^0.1.1",
+        "request": "^2.83.0",
         "sha1": "^1.1.1",
         "wafer-node-session": "^1.0.10"
     },
