--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
     "license": "ISC",
     "dependencies": {
         "@decorators/express": "^2.2.1",
-        "@types/request": "^2.47.0",
         "body-parser": "^1.18.2",
         "debug": "^3.1.0",
         "express": "^4.16.2",
@@ -42,7 +41,9 @@
         "@types/express": "^4.11.1",
         "@types/mocha": "^2.2.48",
         "@types/morgan": "^1.7.35",
+        "@types/mysql": "^2.15.3",
         "@types/node": "^9.4.0",
+        "@types/request": "^2.47.0",
         "chai": "^4.1.2",
         "chai-http": "^3.0.0",
         "gulp-nodemon": "^2.2.1",
