--- a/package.json
+++ b/package.json
@@ -1,54 +1,46 @@
 {
-    "name": "weapp",
-    "version": "0.0.2",
-    "description": "從 nodejs、express 和 typescript 到 微信小程序 server",
-    "main": "index.js",
-    "scripts": {
-        "gulp": "gulp",
-        "test": "NODE_TLS_REJECT_UNAUTHORIZED=0 mocha --reporter spec --exit --compilers ts:ts-node/register 'test/**/*.test.ts'",
-        "build": "tsc",
-        "prestart": "npm run build",
-        "start": "node ./dist/index.js",
-        "serve": "node ./dist/index.js",
-        "login": "ssh leo@54.199.147.172",
-        "remote-install": "sh ./npm-scripts/remote-install.sh",
-        "predeploy": "npm run build",
-        "deploy": "sh ./npm-scripts/deploy.sh"
-    },
-    "author": "",
-    "license": "ISC",
-    "dependencies": {
-        "@decorators/express": "^2.2.1",
-        "body-parser": "^1.18.2",
-        "debug": "^3.1.0",
-        "express": "^4.16.2",
-        "express-mysql-session": "^1.2.3",
-        "express-xml-bodyparser": "^0.3.0",
-        "gulp": "^3.9.1",
-        "gulp-typescript": "^4.0.1",
-        "morgan": "^1.9.0",
-        "mysql": "^2.15.0",
-        "node-weixin-message": "^0.1.1",
-        "request": "^2.83.0",
-        "sha1": "^1.1.1",
-        "wafer-node-session": "^1.0.10"
-    },
-    "devDependencies": {
-        "@types/body-parser": "^1.16.8",
-        "@types/chai": "^4.1.2",
-        "@types/chai-http": "^3.0.3",
-        "@types/debug": "0.0.30",
-        "@types/express": "^4.11.1",
-        "@types/mocha": "^2.2.48",
-        "@types/morgan": "^1.7.35",
-        "@types/mysql": "^2.15.3",
-        "@types/node": "^9.4.0",
-        "@types/request": "^2.47.0",
-        "chai": "^4.1.2",
-        "chai-http": "^3.0.0",
-        "gulp-nodemon": "^2.2.1",
-        "mocha": "^5.0.0",
-        "ts-node": "^4.1.0",
-        "typescript": "^2.6.2"
-    }
+  "name": "express-server-typescript",
+  "version": "1.0.0",
+  "description": "使用 typescript 實作 nodejs server",
+  "main": "index.js",
+  "scripts": {
+    "gulp": "gulp",
+    "test": "NODE_TLS_REJECT_UNAUTHORIZED=0 mocha --reporter spec --exit -r ts-node/register 'test/**/*.test.ts'",
+    "build": "tsc",
+    "prestart": "npm run build",
+    "start": "node ./dist/index.js",
+    "serve": "node ./dist/index.js"
+  },
+  "author": "contemplation8213@gmail.com",
+  "license": "ISC",
+  "dependencies": {
+    "@decorators/express": "^2.2.1",
+    "body-parser": "^1.18.2",
+    "debug": "^3.1.0",
+    "express": "^4.16.2",
+    "gulp": "^3.9.1",
+    "gulp-typescript": "^4.0.1",
+    "morgan": "^1.9.0",
+    "mysql": "^2.15.0",
+    "request": "^2.83.0",
+    "sha1": "^1.1.1"
+  },
+  "devDependencies": {
+    "@types/body-parser": "^1.16.8",
+    "@types/chai": "^4.1.2",
+    "@types/chai-http": "^3.0.3",
+    "@types/debug": "0.0.30",
+    "@types/express": "^4.11.1",
+    "@types/mocha": "^2.2.48",
+    "@types/morgan": "^1.7.35",
+    "@types/mysql": "^2.15.3",
+    "@types/node": "^9.4.0",
+    "@types/request": "^2.47.0",
+    "chai": "^4.1.2",
+    "chai-http": "^3.0.0",
+    "gulp-nodemon": "^2.2.1",
+    "mocha": "^5.0.0",
+    "ts-node": "^4.1.0",
+    "typescript": "^2.6.2"
+  }
 }
