--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "sha1": "^1.1.1"
   },
   "devDependencies": {
+    "@decorators/di": "^1.0.2",
     "@types/body-parser": "^1.16.8",
     "@types/chai": "^4.1.2",
     "@types/chai-http": "^3.0.3",
